--- a/views/user_home.hbs
+++ b/views/user_home.hbs
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,11 +12,13 @@
             top: 10px;
             right: 10px;
         }
+
         .auth-buttons button {
             margin-left: 10px;
         }
     </style>
 </head>
+
 <body>
     <div class="auth-buttons" id="auth-buttons">
         {{#if username}}
@@ -167,8 +170,10 @@
         function logOut() {
             localStorage.removeItem('token');
             alert('Logged out successfully');
-            location.reload(); // Reload the page to reset the UI
+            window.location.href = '/'; // Redirect to the homepage
         }
+
     </script>
 </body>
+
 </html>
