--- a/views/room.hbs
+++ b/views/room.hbs
@@ -6,31 +6,28 @@
 </head>
 
 <body>
-    <h1>Room Name: {{ roomName }}</h1>
-    <div class="welcome">
-        <p>Room ID: {{ roomID }}</p>
-        <p id="nickName">Welcome </p>
-        <h2>Messages:</h2>
-    </div>
-    <div id="msgList"></div>
-    <label for="msg">Enter message:</label>
-    <input type="text" id="msg" name="msg" required>
-    <div class="welcome">
-        <br>
-        <input type="submit" value="Submit" onclick="newMsg()">
-        <br>
-        <button type="button" style = "background-color:rgb(227, 5, 5)"onclick="deleteRoom('{{roomID}}')">Delete Room</button>
+    <button onclick="goBack()" class="back-button"></button>
+    <button onclick="deleteRoom('{{roomID}}')" class="delete-button"></button>
+
+    <div class="msg-header">
+        <h2>{{ roomName }}</h2>
+        <div class="welcome"> <p>#{{ roomID }}</p> </div>
     </div>
 
+    <div id="msgList" class="msg-list"></div>
+    <div class="msg-bottom">
+        <div class="input-group">
+            <input type="text" id="msg" class="form-control" placeholder="Enter message...">
+            <input onclick="newMsg()" class="submit-button">
+        </div>
+    </div>
 
 <script>
     var nickName = prompt("Please enter your name", "nickName");
-    if (nickName != null) {
-        document.getElementById("nickName").innerHTML +=
-            nickName + "!";
-    }
+
     var msgList = [];
-    const msg = document.getElementById('msgList');
+    const msgContainer = document.getElementById('msgList');
+
     async function fetchData() {
         try {
             const response = await fetch(`http://localhost:8080/{{roomID}}/messages`);
@@ -40,20 +37,42 @@
         } catch (error) {
             console.error('Error fetching data:', error);
         }
-        let msgContainer = document.createElement('div');
+        displayMessages();
+    }
+
+    function displayMessages() {
+        msgContainer.innerHTML = '';
         msgList.forEach(msg => {
-            const msgItem = document.createElement('a');
+            const msgWrapper = document.createElement('div');
+            msgWrapper.classList.add('msg-wrapper');
+
+            const msgMeta = document.createElement('div');
+            msgMeta.classList.add('msg-meta');
+
+            const msgUser = document.createElement('span');
+            msgUser.classList.add('msg-user');
+            msgUser.textContent = msg.name;
+
+            const msgDate = document.createElement('span');
+            msgDate.classList.add('msg-date');
             const date = new Date(msg.created_date);
             const options = { year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true };
-            const prettyDate = date.toLocaleDateString('en-US', options);
-            msgItem.textContent = `${msg.name}: ${msg.body}     -     ${prettyDate}`;
-            msgContainer.appendChild(msgItem);
-            const endl = document.createElement('br');
-            msgContainer.appendChild(endl);
+            msgDate.textContent = date.toLocaleDateString('en-US', options);
+
+            msgMeta.appendChild(msgUser);
+            msgMeta.appendChild(msgDate);
+
+            const msgBubble = document.createElement('div');
+            msgBubble.classList.add('msg-bubble');
+            msgBubble.textContent = msg.body;
+
+            msgWrapper.appendChild(msgMeta);
+            msgWrapper.appendChild(msgBubble);
+
+            msgContainer.appendChild(msgWrapper);
         });
-        msg.innerHTML = '';
-        msg.appendChild(msgContainer);
     }
+
     setInterval(fetchData, 3000);
     fetchData();
 
@@ -62,7 +81,7 @@
         const message = msgInput.value;
         try {
             let date = new Date();
-            const response = await fetch('http://localhost:8080/{{roomID}}/messages', {
+            const response = await fetch(`http://localhost:8080/{{roomID}}/messages`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -70,7 +89,7 @@
                 body: JSON.stringify({ message, nickName, date }),
             });
             msgInput.value = '';
-            fetchData(); // Refresh the msgList after sent new msg
+            fetchData(); // Refresh the msgList after sending new msg
         } catch (error) {
             console.error('Error sending message:', error);
         }
@@ -83,10 +102,15 @@
             });
             const result = await response.json();
             console.log(result);
-            alert(result);
+            alert('Chatroom Deleted');
             window.location.href = 'http://localhost:8080/';
         } catch (error) {
             console.error('Error deleting room:', error);
         }
     }
+
+    function goBack() {
+        window.location.href = 'http://localhost:8080/';
+    }
 </script>
+</body>
