--- a/views/room.hbs
+++ b/views/room.hbs
@@ -9,7 +9,7 @@
     <h1>Room Name: {{ roomName }}</h1>
     <div class="welcome">
         <p>Room ID: {{ roomID }}</p>
-        <p id="nickName">Welcome </p>
+        <p id="nickName">Welcome {{ username }}!</p>
     </div>
     <label for="search">Search message:</label>
     <input type="text" id="search" name="search" required>
@@ -22,20 +22,15 @@
         <br>
         <input type="submit" value="Submit" onclick="newMsg()">
         <br>
-        <button type="button" style="background-color:rgb(227, 5, 5)" onclick="deleteRoom('{{roomID}}')">Delete
-            Room</button>
+        <button type="button" style="background-color:rgb(227, 5, 5)" onclick="deleteRoom('{{roomID}}')">Delete Room</button>
     </div>
 
-
     <script>
-        var nickName = prompt("Please enter your name", "nickName");
-        if (nickName != null) {
-            document.getElementById("nickName").innerHTML +=
-                nickName + "!";
-        }
+        var username = '{{ username }}';
         var msgList = [];
         var searchText = '';
         const msg = document.getElementById('msgList');
+
         async function fetchData() {
             try {
                 const response = await fetch(`http://localhost:8080/{{roomID}}/messages`);
@@ -47,21 +42,20 @@
             }
             let msgContainer = document.createElement('div');
             msgList.forEach(msg => {
-                //message text
                 const msgText = document.createElement('a');
                 const date = new Date(msg.created_date);
                 const options = { year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true };
                 const prettyDate = date.toLocaleDateString('en-US', options);
-                msgText.textContent = `${msg.name}: ${msg.body}     -     ${prettyDate}`;
+                msgText.textContent = `${msg.name}: ${msg.body} - ${prettyDate}`;
                 msgText.id = msg._id;
-                //message edit button
+
                 const editButton = document.createElement('button');
                 editButton.textContent = 'EDIT';
                 editButton.onclick = function () {
                     let text = prompt("Please enter new text", msg.body);
                     updateMsg('{{roomID}}', msg._id, text);
                 };
-                //message delete button
+
                 const deleteButton = document.createElement('button');
                 deleteButton.textContent = 'DELETE';
                 deleteButton.onclick = function () { deleteMsg('{{roomID}}', msg._id) };
@@ -69,11 +63,11 @@
                 const msgItem = document.createElement('div');
                 msgItem.style = "display: flex";
                 msgItem.appendChild(msgText);
-                if (nickName == msg.name) {
+                if (username === msg.name) {
                     msgItem.appendChild(editButton);
                     msgItem.appendChild(deleteButton);
                 }
-                if (searchText == '' || msg.body.includes(searchText)) {
+                if (searchText === '' || msg.body.includes(searchText)) {
                     msgContainer.appendChild(msgItem);
                     const endl = document.createElement('br');
                     msgContainer.appendChild(endl);
@@ -96,10 +90,10 @@
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({ message, nickName, date }),
+                    body: JSON.stringify({ message, nickName: username, date }),
                 });
                 msgInput.value = '';
-                fetchData(); // Refresh the msgList after sent new msg
+                fetchData();
             } catch (error) {
                 console.error('Error sending message:', error);
             }
@@ -118,6 +112,7 @@
                 console.error('Error deleting room:', error);
             }
         }
+
         async function deleteMsg(roomID, msgID) {
             try {
                 const response = await fetch(`http://localhost:8080/${roomID}/messages-delete`, {
@@ -160,3 +155,4 @@
             }
         }
     </script>
+</body>
