--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,3 +1,6 @@
+<!doctype html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,31 +16,38 @@
     <div class="list-container">
         <div id="list"></div>
     </div>
+
+    <button onclick="goBack()" class="goback-button"></button>
     
     <button onclick="createRoom()" class="create-button"></button>
 
-    <div class="auth-buttons" id="auth-buttons">
-        {{#if username}}
-        <button type="button" class="profile-button" onclick="viewProfile()"></button>
-        <button type="button" class="logout-button" onclick="logOut()"></button>
-        {{else}}
-        <button type="button" class="signup-button" onclick="signUp()"></button>
-        <button type="button" class="login-button" onclick="logIn()"></button>
-        {{/if}}
+    <h4>My Profile</h4><br>
+
+    <div class="profile-container">
+        <div class="profile">
+    <form action="/user/{{username}}/profile/update" method="post">
+        <br><label for="gender">Gender:</label><br>
+        <select name="gender" id="gender">
+            <option value="male" {{#if (eq gender "male")}}selected{{/if}}>Male</option>
+            <option value="female" {{#if (eq gender "female")}}selected{{/if}}>Female</option>
+            <option value="other" {{#if (eq gender "other")}}selected{{/if}}>Others</option>
+        </select><br><br>
+
+        <label for="age">Age:</label><br>
+        <input type="number" id="age" name="age" value="{{age}}"><br><br>
+
+        <label for="introduction">Introduction:</label><br>
+        <textarea id="introduction" name="introduction" rows="4" cols="50">{{introduction}}</textarea><br>
+
+        <br><input type="submit" value="Update">
+    </form>
     </div>
-
-    <h3>Welcome to the chatroom!</h3><br>
-
-    <div class="Log-In">
-        <span>Log In</span>
     </div>
+    
 
-    <div class="Log-Out">
-        <span>Sign Up</span>
-    </div>
-
-<script>
-    var roomList = [];
+    <script>
+        var roomList = [];
+        const userUrl = localStorage.getItem('userUrl');
     const list = document.getElementById('list');
     fetchData();
     async function fetchData() {
@@ -94,11 +104,6 @@
         }
     }
 
-    // Function for prompting login
-        function promptLogin() {
-            alert("You must login first");
-        }
-
         // Function for Sign Up
         async function signUp() {
             var username = prompt("Please enter username", "username");
@@ -140,11 +145,8 @@
                         alert('Log In successful');
                         // Save token and update UI
                         localStorage.setItem('token', result.token);
-                        localStorage.setItem('username', result.username);
                         updateAuthUI(result.username);
                         window.location.href = `http://localhost:8080/user/${result.username}`; // Redirect to the new URL
-                        const userUrl = `http://localhost:8080/user/${result.username}`;
-                        localStorage.setItem('userUrl', userUrl);
                     } else {
                         alert(result.error || 'Log In failed');
                     }
@@ -168,8 +170,10 @@
 
         // Function to view profile
         function viewProfile() {
-            alert('Profile page not implemented yet.');
+            const username = '{{username}}';
+            window.location.href = `/user/${username}/profile`;
         }
+
 
         // Function to log out
         function logOut() {
@@ -178,6 +182,12 @@
             window.location.href = '/'; // Redirect to the homepage
         }
 
-</script>
+        function goBack() {
+            window.location.href = userUrl;
+        }
+    </script>
 </body>
-</html>
+
+
+    
+
