--- a/views/room.hbs
+++ b/views/room.hbs
@@ -11,7 +11,16 @@
 
     <div class="msg-header">
         <h2>{{ roomName }}</h2>
-        <div class="welcome"> <p>#{{ roomID }}</p> </div>
+        <div class="welcome">
+            <p>#{{ roomID }}</p>
+        </div>
+    </div>
+
+    <div class="search-message">
+        <div class="input-group">
+            <input type="text" id="search" name="search" class="form-control" placeholder="Search...">
+            <input onclick="searchMsg()" class="search-button">
+        </div>
     </div>
 
     <div id="msgList" class="msg-list"></div>
@@ -24,9 +33,10 @@
 
 <script>
     var nickName = prompt("Please enter your name", "nickName");
-
     var msgList = [];
+    var searchText = '';
     const msgContainer = document.getElementById('msgList');
+    const userUrl = localStorage.getItem('userUrl');
 
     async function fetchData() {
         try {
@@ -43,33 +53,55 @@
     function displayMessages() {
         msgContainer.innerHTML = '';
         msgList.forEach(msg => {
-            const msgWrapper = document.createElement('div');
-            msgWrapper.classList.add('msg-wrapper');
+            if (searchText === '' || msg.body.includes(searchText)) {
+                const msgWrapper = document.createElement('div');
+                msgWrapper.classList.add('msg-wrapper');
 
-            const msgMeta = document.createElement('div');
-            msgMeta.classList.add('msg-meta');
+                const msgMeta = document.createElement('div');
+                msgMeta.classList.add('msg-meta');
 
-            const msgUser = document.createElement('span');
-            msgUser.classList.add('msg-user');
-            msgUser.textContent = msg.name;
+                const msgUser = document.createElement('span');
+                msgUser.classList.add('msg-user');
+                msgUser.textContent = msg.name;
 
-            const msgDate = document.createElement('span');
-            msgDate.classList.add('msg-date');
-            const date = new Date(msg.created_date);
-            const options = { year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true };
-            msgDate.textContent = date.toLocaleDateString('en-US', options);
+                const msgDate = document.createElement('span');
+                msgDate.classList.add('msg-date');
+                const date = new Date(msg.created_date);
+                const options = { year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true };
+                msgDate.textContent = date.toLocaleDateString('en-US', options);
 
-            msgMeta.appendChild(msgUser);
-            msgMeta.appendChild(msgDate);
+                msgMeta.appendChild(msgUser);
+                msgMeta.appendChild(msgDate);
 
-            const msgBubble = document.createElement('div');
-            msgBubble.classList.add('msg-bubble');
-            msgBubble.textContent = msg.body;
+                const msgBubble = document.createElement('div');
+                msgBubble.classList.add('msg-bubble');
+                msgBubble.textContent = msg.body;
 
-            msgWrapper.appendChild(msgMeta);
-            msgWrapper.appendChild(msgBubble);
+                const deleteButton = document.createElement('button');
+                deleteButton.textContent = 'DELETE';
+                deleteButton.onclick = function () { deleteMsg('{{roomID}}', msg._id) };
+                deleteButton.style = "color: #fff; background-color:#e91515ab; width: 70px; height: 20px;border-radius: 10px;border: none;cursor: pointer";
 
-            msgContainer.appendChild(msgWrapper);
+                const editButton = document.createElement('button');
+                editButton.textContent = 'EDIT';
+                editButton.style = "color: #fff; background-color:#007bff9e; width: 70px; height: 20px;border-radius: 10px;border: none;cursor: pointer; margin-bottom: 5px; margin-top: 5px;";
+                editButton.onclick = function () {
+                    let newText = prompt("Please enter new text", msg.body);
+                    if (newText) {
+                        updateMsg('{{roomID}}', msg._id, newText);
+                    }
+                };
+
+                msgWrapper.appendChild(msgMeta);
+                msgWrapper.appendChild(msgBubble);
+
+                if (nickName === msg.name) {
+                    msgWrapper.appendChild(editButton);
+                    msgWrapper.appendChild(deleteButton);
+                }
+
+                msgContainer.appendChild(msgWrapper);
+            }
         });
     }
 
@@ -89,7 +121,7 @@
                 body: JSON.stringify({ message, nickName, date }),
             });
             msgInput.value = '';
-            fetchData(); // Refresh the msgList after sending new msg
+            fetchData();
         } catch (error) {
             console.error('Error sending message:', error);
         }
@@ -103,14 +135,56 @@
             const result = await response.json();
             console.log(result);
             alert('Chatroom Deleted');
-            window.location.href = 'http://localhost:8080/';
+            window.location.href = userUrl;
         } catch (error) {
             console.error('Error deleting room:', error);
         }
     }
 
     function goBack() {
-        window.location.href = 'http://localhost:8080/';
+        window.location.href = userUrl;
+    }
+
+    async function deleteMsg(roomID, msgID) {
+        try {
+            const response = await fetch(`http://localhost:8080/${roomID}/messages-delete`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ msgID: msgID }),
+            });
+            const result = await response.json();
+            console.log(result);
+            fetchData();
+        } catch (error) {
+            console.error('Error deleting message:', error);
+        }
+    }
+
+    async function searchMsg() {
+        const searchInput = document.getElementById('search');
+        const text = searchInput.value;
+        searchText = (text === undefined) ? '' : text;
+        console.log(searchText);
+        fetchData();
+    }
+
+    async function updateMsg(roomID, msgID, text) {
+        try {
+            const response = await fetch(`http://localhost:8080/${roomID}/messages-update`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ msgID: msgID, text: text }),
+            });
+            const result = await response.json();
+            console.log(result);
+            fetchData();
+        } catch (error) {
+            console.error('Error updating message:', error);
+        }
     }
 </script>
 </body>
