--- a/views/user_home.hbs
+++ b/views/user_home.hbs
@@ -1,3 +1,6 @@
+<!doctype html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,7 +19,16 @@
     
     <button onclick="createRoom()" class="create-button"></button>
 
-    <div class="auth-buttons" id="auth-buttons">
+    <h3>Welcome to your homepage, {{username}}!</h3><br>
+    <div class="My-Profile">
+        <span>My Profile</span>
+    </div>
+
+    <div class="Log-Out">
+        <span>Log Out</span>
+    </div>
+
+    <div>
         {{#if username}}
         <button type="button" class="profile-button" onclick="viewProfile()"></button>
         <button type="button" class="logout-button" onclick="logOut()"></button>
@@ -26,18 +38,8 @@
         {{/if}}
     </div>
 
-    <h3>Welcome to the chatroom!</h3><br>
-
-    <div class="Log-In">
-        <span>Log In</span>
-    </div>
-
-    <div class="Log-Out">
-        <span>Sign Up</span>
-    </div>
-
-<script>
-    var roomList = [];
+    <script>
+        var roomList = [];
     const list = document.getElementById('list');
     fetchData();
     async function fetchData() {
@@ -94,11 +96,6 @@
         }
     }
 
-    // Function for prompting login
-        function promptLogin() {
-            alert("You must login first");
-        }
-
         // Function for Sign Up
         async function signUp() {
             var username = prompt("Please enter username", "username");
@@ -140,11 +137,8 @@
                         alert('Log In successful');
                         // Save token and update UI
                         localStorage.setItem('token', result.token);
-                        localStorage.setItem('username', result.username);
                         updateAuthUI(result.username);
                         window.location.href = `http://localhost:8080/user/${result.username}`; // Redirect to the new URL
-                        const userUrl = `http://localhost:8080/user/${result.username}`;
-                        localStorage.setItem('userUrl', userUrl);
                     } else {
                         alert(result.error || 'Log In failed');
                     }
@@ -168,8 +162,10 @@
 
         // Function to view profile
         function viewProfile() {
-            alert('Profile page not implemented yet.');
+            const username = '{{username}}';
+            window.location.href = `/user/${username}/profile`;
         }
+
 
         // Function to log out
         function logOut() {
@@ -178,6 +174,7 @@
             window.location.href = '/'; // Redirect to the homepage
         }
 
-</script>
+    </script>
 </body>
+
 </html>
