--- a/views/room.hbs
+++ b/views/room.hbs
@@ -6,153 +6,185 @@
 </head>
 
 <body>
-    <h1>Room Name: {{ roomName }}</h1>
-    <div class="welcome">
-        <p>Room ID: {{ roomID }}</p>
-        <p id="nickName">Welcome {{ username }}!</p>
-    </div>
-    <label for="search">Search message:</label>
-    <input type="text" id="search" name="search" required>
-    <button type="button" onclick="searchMsg()">SEARCH</button>
-    <h2>Messages:</h2>
-    <div id="msgList"></div>
-    <label for="msg">Enter message:</label>
-    <input type="text" id="msg" name="msg" required>
-    <div class="welcome">
-        <br>
-        <input type="submit" value="Submit" onclick="newMsg()">
-        <br>
-        <button type="button" style="background-color:rgb(227, 5, 5)" onclick="deleteRoom('{{roomID}}')">Delete Room</button>
+    <button onclick="goBack()" class="back-button"></button>
+    <button onclick="deleteRoom('{{roomID}}')" class="delete-button"></button>
+
+    <div class="msg-header">
+        <h2>{{ roomName }}</h2>
+        <div class="welcome">
+            <p>#{{ roomID }}</p>
+        </div>
     </div>
 
-    <script>
-        var username = '{{ username }}';
-        var msgList = [];
-        var searchText = '';
-        const msg = document.getElementById('msgList');
+    <div class="search-message">
+        <div class="input-group">
+            <input type="text" id="search" name="search" class="form-control" placeholder="Search...">
+            <input onclick="searchMsg()" class="search-button">
+        </div>
+    </div>
 
-        async function fetchData() {
-            try {
-                const response = await fetch(`http://localhost:8080/{{roomID}}/messages`);
-                const data = await response.json();
-                msgList = data;
-                console.log(data);
-            } catch (error) {
-                console.error('Error fetching data:', error);
-            }
-            let msgContainer = document.createElement('div');
-            msgList.forEach(msg => {
-                const msgText = document.createElement('a');
+    <div id="msgList" class="msg-list"></div>
+    <div class="msg-bottom">
+        <div class="input-group">
+            <input type="text" id="msg" class="form-control" placeholder="Enter message...">
+            <input onclick="newMsg()" class="submit-button">
+        </div>
+    </div>
+
+<script>
+    var nickName = prompt("Please enter your name", "nickName");
+    var msgList = [];
+    var searchText = '';
+    const msgContainer = document.getElementById('msgList');
+    const userUrl = localStorage.getItem('userUrl');
+
+    async function fetchData() {
+        try {
+            const response = await fetch(`http://localhost:8080/{{roomID}}/messages`);
+            const data = await response.json();
+            msgList = data;
+            console.log(data);
+        } catch (error) {
+            console.error('Error fetching data:', error);
+        }
+        displayMessages();
+    }
+
+    function displayMessages() {
+        msgContainer.innerHTML = '';
+        msgList.forEach(msg => {
+            if (searchText === '' || msg.body.includes(searchText)) {
+                const msgWrapper = document.createElement('div');
+                msgWrapper.classList.add('msg-wrapper');
+
+                const msgMeta = document.createElement('div');
+                msgMeta.classList.add('msg-meta');
+
+                const msgUser = document.createElement('span');
+                msgUser.classList.add('msg-user');
+                msgUser.textContent = msg.name;
+
+                const msgDate = document.createElement('span');
+                msgDate.classList.add('msg-date');
                 const date = new Date(msg.created_date);
                 const options = { year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true };
-                const prettyDate = date.toLocaleDateString('en-US', options);
-                msgText.textContent = `${msg.name}: ${msg.body} - ${prettyDate}`;
-                msgText.id = msg._id;
+                msgDate.textContent = date.toLocaleDateString('en-US', options);
 
-                const editButton = document.createElement('button');
-                editButton.textContent = 'EDIT';
-                editButton.onclick = function () {
-                    let text = prompt("Please enter new text", msg.body);
-                    updateMsg('{{roomID}}', msg._id, text);
-                };
+                msgMeta.appendChild(msgUser);
+                msgMeta.appendChild(msgDate);
+
+                const msgBubble = document.createElement('div');
+                msgBubble.classList.add('msg-bubble');
+                msgBubble.textContent = msg.body;
 
                 const deleteButton = document.createElement('button');
                 deleteButton.textContent = 'DELETE';
                 deleteButton.onclick = function () { deleteMsg('{{roomID}}', msg._id) };
-                deleteButton.style = "background-color:rgb(227, 5, 5)";
-                const msgItem = document.createElement('div');
-                msgItem.style = "display: flex";
-                msgItem.appendChild(msgText);
-                if (username === msg.name) {
-                    msgItem.appendChild(editButton);
-                    msgItem.appendChild(deleteButton);
+                deleteButton.style = "color: #fff; background-color:#e91515ab; width: 70px; height: 20px;border-radius: 10px;border: none;cursor: pointer";
+
+                const editButton = document.createElement('button');
+                editButton.textContent = 'EDIT';
+                editButton.style = "color: #fff; background-color:#007bff9e; width: 70px; height: 20px;border-radius: 10px;border: none;cursor: pointer; margin-bottom: 5px; margin-top: 5px;";
+                editButton.onclick = function () {
+                    let newText = prompt("Please enter new text", msg.body);
+                    if (newText) {
+                        updateMsg('{{roomID}}', msg._id, newText);
+                    }
+                };
+
+                msgWrapper.appendChild(msgMeta);
+                msgWrapper.appendChild(msgBubble);
+
+                if (nickName === msg.name) {
+                    msgWrapper.appendChild(editButton);
+                    msgWrapper.appendChild(deleteButton);
                 }
-                if (searchText === '' || msg.body.includes(searchText)) {
-                    msgContainer.appendChild(msgItem);
-                    const endl = document.createElement('br');
-                    msgContainer.appendChild(endl);
-                }
+
+                msgContainer.appendChild(msgWrapper);
+            }
+        });
+    }
+
+    setInterval(fetchData, 3000);
+    fetchData();
+
+    async function newMsg() {
+        const msgInput = document.getElementById('msg');
+        const message = msgInput.value;
+        try {
+            let date = new Date();
+            const response = await fetch(`http://localhost:8080/{{roomID}}/messages`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ message, nickName, date }),
             });
-            msg.innerHTML = '';
-            msg.appendChild(msgContainer);
-            console.log(searchText);
-        }
-        setInterval(fetchData, 3000);
-        fetchData();
-
-        async function newMsg() {
-            const msgInput = document.getElementById('msg');
-            const message = msgInput.value;
-            try {
-                let date = new Date();
-                const response = await fetch('http://localhost:8080/{{roomID}}/messages', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ message, nickName: username, date }),
-                });
-                msgInput.value = '';
-                fetchData();
-            } catch (error) {
-                console.error('Error sending message:', error);
-            }
-        }
-
-        async function deleteRoom(roomID) {
-            try {
-                const response = await fetch(`http://localhost:8080/${roomID}-delete`, {
-                    method: 'POST',
-                });
-                const result = await response.json();
-                console.log(result);
-                alert(result);
-                window.location.href = 'http://localhost:8080/';
-            } catch (error) {
-                console.error('Error deleting room:', error);
-            }
-        }
-
-        async function deleteMsg(roomID, msgID) {
-            try {
-                const response = await fetch(`http://localhost:8080/${roomID}/messages-delete`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ msgID: msgID }),
-                });
-                const result = await response.json();
-                console.log(result);
-                fetchData();
-            } catch (error) {
-                console.error('Error deleting message:', error);
-            }
-        }
-
-        async function searchMsg() {
-            const searchInput = document.getElementById('search');
-            const text = searchInput.value;
-            searchText = (text === undefined) ? '' : text;
-            console.log(searchText);
+            msgInput.value = '';
             fetchData();
+        } catch (error) {
+            console.error('Error sending message:', error);
         }
+    }
 
-        async function updateMsg(roomID, msgID, text) {
-            try {
-                const response = await fetch(`http://localhost:8080/${roomID}/messages-update`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ msgID: msgID, text: text }),
-                });
-                const result = await response.json();
-                console.log(result);
-                fetchData();
-            } catch (error) {
-                console.error('Error updating message:', error);
-            }
+    async function deleteRoom(roomID) {
+        try {
+            const response = await fetch(`http://localhost:8080/${roomID}-delete`, {
+                method: 'POST',
+            });
+            const result = await response.json();
+            console.log(result);
+            alert('Chatroom Deleted');
+            window.location.href = userUrl;
+        } catch (error) {
+            console.error('Error deleting room:', error);
         }
-    </script>
+    }
+
+    function goBack() {
+        window.location.href = userUrl;
+    }
+
+    async function deleteMsg(roomID, msgID) {
+        try {
+            const response = await fetch(`http://localhost:8080/${roomID}/messages-delete`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ msgID: msgID }),
+            });
+            const result = await response.json();
+            console.log(result);
+            fetchData();
+        } catch (error) {
+            console.error('Error deleting message:', error);
+        }
+    }
+
+    async function searchMsg() {
+        const searchInput = document.getElementById('search');
+        const text = searchInput.value;
+        searchText = (text === undefined) ? '' : text;
+        console.log(searchText);
+        fetchData();
+    }
+
+    async function updateMsg(roomID, msgID, text) {
+        try {
+            const response = await fetch(`http://localhost:8080/${roomID}/messages-update`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ msgID: msgID, text: text }),
+            });
+            const result = await response.json();
+            console.log(result);
+            fetchData();
+        } catch (error) {
+            console.error('Error updating message:', error);
+        }
+    }
+</script>
 </body>
